--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
