--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-sanity": "^1.0.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0"
   },
   "devDependencies": {
