--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-react": "^7.18.6",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
+    "canvas-confetti": "^1.6.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
